tree-sitter-nl/test/corpus/literals.txt
================================================================================
Python literal block
================================================================================

@literal python {
def hello():
    return "world"
}

--------------------------------------------------------------------------------

(source_file
  (literal_block
    (literal_header
      language: (identifier))
    content: (literal_content)
    (literal_close)))

================================================================================
Test block simple
================================================================================

@test [add] {
  add(1, 2) == 3
  add(0, 0) == 0
}

--------------------------------------------------------------------------------

(source_file
  (test_block
    (test_header
      anlu: (anlu_identifier))
    (test_assertion
      expression: (expression
        (function_call
          function: (identifier)
          (argument_list
            (expression
              (number))
            (expression
              (number)))))
      expected: (expression
        (number)))
    (test_assertion
      expression: (expression
        (function_call
          function: (identifier)
          (argument_list
            (expression
              (number))
            (expression
              (number)))))
      expected: (expression
        (number)))
    (test_close)))

================================================================================
Test block with negative numbers
================================================================================

@test [subtract] {
  subtract(5, 3) == 2
  subtract(0, 5) == -5
}

--------------------------------------------------------------------------------

(source_file
  (test_block
    (test_header
      anlu: (anlu_identifier))
    (test_assertion
      expression: (expression
        (function_call
          function: (identifier)
          (argument_list
            (expression
              (number))
            (expression
              (number)))))
      expected: (expression
        (number)))
    (test_assertion
      expression: (expression
        (function_call
          function: (identifier)
          (argument_list
            (expression
              (number))
            (expression
              (number)))))
      expected: (expression
        (number)))
    (test_close)))

================================================================================
TypeScript literal block
================================================================================

@literal typescript {
export function greet(name: string): string {
  return `Hello, ${name}!`;
}
}

--------------------------------------------------------------------------------

(source_file
  (literal_block
    (literal_header
      language: (identifier))
    content: (literal_content)
    (literal_close)))

================================================================================
Combined ANLU with literal
================================================================================

[slugify]
PURPOSE: Convert text to URL-friendly slug
INPUTS:
  - text: string

@literal python {
import re

def slugify(text: str) -> str:
    text = text.lower().strip()
    text = re.sub(r'\s+', '-', text)
    return text
}

--------------------------------------------------------------------------------

(source_file
  (anlu_block
    (anlu_header
      name: (anlu_identifier))
    (purpose_section
      (section_header)
      description: (text_line))
    (inputs_section
      (section_header)
      (input_item
        (bullet)
        name: (identifier)
        type: (type_spec
          (primitive_type)))))
  (literal_block
    (literal_header
      language: (identifier))
    content: (literal_content)
    (literal_close)))
